Spacing issues fixed

--- a/eww.scss
+++ b/eww.scss
@@ -82,6 +82,10 @@ tooltip {
   }
 }
 
+.inner-pressable {
+  padding: 0px 10px 0px 10px;
+}
+
 .date {
   font-weight: bold;
 }
